some hacking on prototype

--- a/prototyping_notebooks/parse_serial_dump_train_model.ipynb
+++ b/prototyping_notebooks/parse_serial_dump_train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "id": "f3605364",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "fd4d2797",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "records_long = []\n",
     "records_wide = []\n",
     "n = 0\n",
-    "for line in open('serial_dump_from_daisy.txt', 'r'):\n",
+    "for line in open('../serial_dump_from_daisy.txt', 'r'):\n",
     "    try:\n",
     "        if line.startswith('b'): \n",
     "            cv = float(line.split(\" \")[2])\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "f4e57de9",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "<Axes: xlabel='n', ylabel='cv'>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "93faad26",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22519/2726709270.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_27413/2726709270.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  sns.lineplot(data=df_long[11000:13000][df_long['name']=='cv'], x='n', y='val')\n"
      ]
     },
@@ -93,7 +93,7 @@
        "<Axes: xlabel='n', ylabel='val'>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "6007c24f",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "<Axes: xlabel='n', ylabel='val'>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "780620ee",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "4  1   in_v -0.256649"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "cfd3be4c",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "4  4  0.55859 -0.069552  0.122621"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "84436a1b",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "id": "b333f23d",
    "metadata": {},
    "outputs": [
@@ -370,10 +370,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "id": "a01ae3bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-03 13:41:39.294301: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-09-03 13:41:39.743713: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import *\n",
@@ -385,12 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "id": "b03c6c1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for training and equiavlence testing\n",
+    "# fully dilated for training and strided for equiavlence testing\n",
     "\n",
     "def create_dilated_model(seq_len, all_outputs=False):\n",
     "    inp = Input((seq_len, 2))\n",
@@ -427,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "id": "caad757b",
    "metadata": {},
    "outputs": [
@@ -435,11 +445,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_13\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_14 (InputLayer)       [(None, 20, 2)]           0         \n",
+      " input_1 (InputLayer)        [(None, 20, 2)]           0         \n",
       "                                                                 \n",
       " c1 (Conv1D)                 (None, 20, 4)             28        \n",
       "                                                                 \n",
@@ -453,11 +463,11 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n",
-      "Model: \"model_14\"\n",
+      "Model: \"model_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_15 (InputLayer)       [(None, 9, 2)]            0         \n",
+      " input_2 (InputLayer)        [(None, 9, 2)]            0         \n",
       "                                                                 \n",
       " c1 (Conv1D)                 (None, 9, 4)              28        \n",
       "                                                                 \n",
@@ -471,6 +481,15 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-03 13:41:40.869857: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-03 13:41:40.891396: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
      ]
     }
    ],
