some refactoring of layer0 caching. still just cached layer0 and single call to layer1

--- a/prototyping_notebooks/prototype_cached_conv1d.ipynb
+++ b/prototyping_notebooks/prototype_cached_conv1d.ipynb
@@ -1488,9 +1488,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c56820f",
+   "metadata": {},
+   "source": [
+    "# caching\n",
+    "\n",
+    "introduce a rolling cache so layer0 only needs to be called once per `apply`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "632a1b86",
+   "id": "b716f470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1530,34 +1540,23 @@
     "            idxs.append(idx)\n",
     "            i -= 1\n",
     "        # return those entries from cache\n",
-    "        return self.cache[idxs]\n",
-    "        \n",
-    "    \n",
-    "# rc = RollingCache(9, 4)\n",
-    "# for i in range(20):        \n",
-    "#     x = np.array([1, 2, 3, i])\n",
-    "#     print(\"i\", i, \"x\", x)\n",
-    "#     rc.add(x)\n",
-    "#     print(\"cdv\", rc.cached_dilated_values())\n"
+    "        return self.cache[idxs]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 122,
    "id": "892f3a3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "class Model(object):\n",
-    "    def __init__(self,\n",
-    "                 c1a_kernel, c1a_bias, c1b_kernel, c1b_bias,\n",
-    "                 c2a_kernel, c2a_bias, c2b_kernel, c2b_bias,\n",
+    "    def __init__(self, layer0, layer1,\n",
     "                 classifier_kernel, classifier_bias\n",
     "                ):\n",
-    "        self.layer0 = Block(c1a_kernel, c1a_bias, c1b_kernel, c1b_bias)\n",
-    "        self.layer1 = Block(c2a_kernel, c2a_bias, c2b_kernel, c2b_bias)\n",
+    "        self.layer0 = layer0\n",
+    "        self.layer1 = layer1\n",
     "        self.classifier_kernel = classifier_kernel\n",
     "        self.classifier_bias = classifier_bias\n",
     "        \n",
@@ -1576,27 +1575,38 @@
     "        self.input[0] = self.input[1]\n",
     "        self.input[1] = self.input[2]\n",
     "        self.input[2] = x        \n",
+    "        \n",
     "        # run the layer 0 block ONCE \n",
     "        layer_0_out_3 = self.layer0.apply(self.input)\n",
     "        # add to cache\n",
-    "        self.layer0_cache.add(layer_0_out_3)\n",
+    "        self.layer0_cache.add(layer_0_out_3)        \n",
     "        # lookup the dilated values from cache\n",
     "        cached_layer_0_outputs = self.layer0_cache.cached_dilated_values()        \n",
+    "        \n",
     "        # feed dildated cached values to layer 1\n",
     "        layer_1_out = self.layer1.apply(cached_layer_0_outputs)\n",
     "        # run y_pred\n",
+    "        # TODO: port to arm math too\n",
     "        y_pred = np.dot(layer_1_out, self.classifier_kernel.squeeze()) + self.classifier_bias\n",
     "        return y_pred\n",
     "                \n",
+    "        \n",
+    "layer0 = Block(\n",
+    "    c1_kernel = test_model.layers[1].weights[0].numpy(),\n",
+    "    c1_bias = test_model.layers[1].weights[1].numpy(),\n",
+    "    c2_kernel = test_model.layers[2].weights[0].numpy(),\n",
+    "    c2_bias = test_model.layers[2].weights[1].numpy(),\n",
+    ")\n",
+    "\n",
+    "layer1 = Block(\n",
+    "    c1_kernel = test_model.layers[3].weights[0].numpy(),\n",
+    "    c1_bias = test_model.layers[3].weights[1].numpy(),\n",
+    "    c2_kernel = test_model.layers[4].weights[0].numpy(),\n",
+    "    c2_bias = test_model.layers[4].weights[1].numpy(),\n",
+    ")\n",
+    "\n",
     "model = Model(\n",
-    "    c1a_kernel = test_model.layers[1].weights[0].numpy(),\n",
-    "    c1a_bias = test_model.layers[1].weights[1].numpy(),\n",
-    "    c1b_kernel = test_model.layers[2].weights[0].numpy(),\n",
-    "    c1b_bias = test_model.layers[2].weights[1].numpy(),\n",
-    "    c2a_kernel = test_model.layers[3].weights[0].numpy(),\n",
-    "    c2a_bias = test_model.layers[3].weights[1].numpy(),\n",
-    "    c2b_kernel = test_model.layers[4].weights[0].numpy(),\n",
-    "    c2b_bias = test_model.layers[4].weights[1].numpy(),\n",
+    "    layer0, layer1,\n",
     "    classifier_kernel = test_model.layers[5].weights[0].numpy(),\n",
     "    classifier_bias = test_model.layers[5].weights[1].numpy()    \n",
     ")        "
@@ -1604,8 +1614,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "8b2e3464",
+   "execution_count": 123,
+   "id": "a4e61ef6",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1635,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,8 +1653,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "5da75b48",
+   "execution_count": 124,
+   "id": "7ddc57bf",
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1667,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1669,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "816e52c2",
+   "id": "138e06b0",
    "metadata": {},
    "outputs": [],
    "source": []
