cached model works with 3 blocks/layers with caching

--- a/prototyping_notebooks/prototype_cached_conv1d.ipynb
+++ b/prototyping_notebooks/prototype_cached_conv1d.ipynb
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "846a3792",
+   "id": "ddd40be6",
    "metadata": {},
    "source": [
     "### manually run second layer"
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc07d9d",
+   "id": "8a2a28b4",
    "metadata": {},
    "source": [
     "### manually run third layer"
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "3920ac75",
+   "id": "f8ef633b",
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50606a34",
+   "id": "cc7f2d44",
    "metadata": {},
    "source": [
     "run all the same stuff in a python object"
@@ -1420,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "6d4dfc32",
+   "id": "81f36332",
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "01511979",
+   "id": "b2d01d45",
    "metadata": {},
    "outputs": [
     {
@@ -1479,94 +1479,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5062d33e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LONGER_TEST_SEQ_LEN = 40\n",
-    "assert LONGER_TEST_SEQ_LEN > TEST_SEQ_LEN\n",
-    "\n",
-    "longer_test_model = create_dilated_model(LONGER_TEST_SEQ_LEN, all_outputs=True)\n",
-    "longer_test_model.set_weights(test_model.get_weights())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0671e187",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "longer_test_seq = np.expand_dims(test_x[:LONGER_TEST_SEQ_LEN], 0)\n",
-    "assert longer_test_seq.shape == (1, LONGER_TEST_SEQ_LEN, 2)\n",
-    "\n",
-    "model_out = longer_test_model(longer_test_seq)\n",
-    "model_out = [v.numpy() for v in model_out]\n",
-    "model_out = [v[0] for v in model_out]            # drop batch, which is always 1\n",
-    "c1a_output, c1b_output, c2a_output, c2b_output, c3a_output, c3b_output, y_pred_keras = model_out\n",
-    "y_pred_keras.flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c37f3f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_seq = np.expand_dims(test_x[:TEST_SEQ_LEN], 0)\n",
-    "y_pred_cmsis = model.apply(test_seq)\n",
-    "\n",
-    "print(y_pred_cmsis, y_pred_keras[-1])\n",
-    "np.all(np.isclose(y_pred_cmsis, y_pred_keras[-1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79f938e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_seq = np.expand_dims(test_x[5:5+TEST_SEQ_LEN], 0)\n",
-    "y_pred_cmsis = model.apply(test_seq)\n",
-    "\n",
-    "print(y_pred_cmsis, y_pred_keras[8+5])\n",
-    "np.all(np.isclose(y_pred_cmsis, y_pred_keras[8+5]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "8059ab8b",
+   "id": "004aaceb",
    "metadata": {},
    "source": [
     "# caching\n",
     "\n",
-    "introduce a rolling cache so layer0 only needs to be called once per `apply`"
+    "introduce a rolling cache so layer 0 and 1 need only be called once per `apply`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "09692396",
+   "execution_count": 60,
+   "id": "3f33e331",
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "class RollingCache(object):\n",
-    "    def __init__(self, num_entries, depth, k=3):                \n",
+    "    def __init__(self, depth, dilation, k=3):\n",
     "        \n",
-    "        # hacky check that num_entries is a power of k\n",
-    "        ne_log_k = math.log(num_entries, k)\n",
+    "        # hacky check that dilation is a power of k\n",
+    "        # otherwise this whole thing doesn't make sense\n",
+    "        ne_log_k = math.log(dilation, k)\n",
     "        if int(ne_log_k) != ne_log_k: \n",
-    "            raise Exception(f\"num_entries ({num_entries}) needs to be a power of k ({k})\")\n",
+    "            raise Exception(f\"dilation ({dilation}) should be a power of k ({k})\")\n",
     "        \n",
-    "        self.num_entries = num_entries\n",
+    "        self.num_entries = dilation * k\n",
     "        self.depth = depth\n",
+    "        self.dilation = dilation\n",
     "        self.k = k\n",
+    "        \n",
     "        self.reset_cache()\n",
     "        \n",
     "    def reset_cache(self):\n",
@@ -1580,43 +1524,53 @@
     "        self.write_head %= self.num_entries\n",
     "        self.cache[self.write_head] = x\n",
     "\n",
-    "    def cached_dilated_values(self):\n",
-    "        # collect index for the entries in the cache that are spread back through the window\n",
-    "        idxs = []\n",
-    "        i = self.k-1\n",
-    "        while i >= 0:\n",
-    "            idx = (self.write_head - (i*self.k))\n",
-    "            idx %= self.num_entries\n",
-    "            idxs.append(idx)\n",
-    "            i -= 1\n",
-    "        # return those entries from cache\n",
-    "        return self.cache[idxs]\n"
+    "    def cached_dilated_values(self):        \n",
+    "        lookup = np.empty((self.k, self.depth), dtype=np.float32)\n",
+    "        lookup_idx = self.k - 1\n",
+    "        cache_idx = self.write_head\n",
+    "        while lookup_idx >= 0:\n",
+    "            lookup[lookup_idx] = self.cache[cache_idx]\n",
+    "            lookup_idx -= 1\n",
+    "            cache_idx = (cache_idx - self.dilation) % self.num_entries\n",
+    "        return lookup\n",
+    "\n",
+    "# rc = RollingCache(depth=4, dilation=9, k=3)\n",
+    "# for i in range(30):    \n",
+    "#     rc.add(np.array([1,1,1,i]))\n",
+    "#     print(i, rc.cached_dilated_values().flatten())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "892f3a3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "class Model(object):\n",
-    "    def __init__(self, layer0, layer1,\n",
-    "                 classifier_kernel, classifier_bias):\n",
-    "        self.layer0 = layer0\n",
-    "        self.layer1 = layer1\n",
+    "class CachedBlockModel(object):\n",
+    "    def __init__(self, \n",
+    "                 block0, block1, block2,\n",
+    "                 classifier_kernel, classifier_bias):        \n",
+    "        self.block0 = block0\n",
+    "        self.block1 = block1\n",
+    "        self.block2 = block2\n",
     "        self.classifier_kernel = classifier_kernel\n",
-    "        self.classifier_bias = classifier_bias\n",
+    "        self.classifier_bias = classifier_bias  \n",
     "        \n",
     "        # buffer for layer0 input\n",
-    "        self.input = np.zeros((3, 2), dtype=np.float32)\n",
+    "        self.input = np.zeros((3, 2), dtype=np.float32)     \n",
     "        \n",
     "        # rolling window cache of layer0 output\n",
-    "        self.layer0_cache = RollingCache(\n",
-    "            num_entries=9, \n",
-    "            depth=self.layer0.c2_out_d,\n",
-    "            k=3)\n",
+    "        # n-1th entry in output lags nth entry by 3\n",
+    "        self.layer0_cache = RollingCache(            \n",
+    "            depth=self.block0.c2_out_d,\n",
+    "            dilation=3, k=3)\n",
+    "        \n",
+    "        # rolling window cache of layer1 output\n",
+    "        # n-1th entry in output lags nth entry by 9\n",
+    "        self.layer1_cache = RollingCache(            \n",
+    "            depth=self.block1.c2_out_d,\n",
+    "            dilation=9, k=3)\n",
     "        \n",
     "    def apply(self, x):\n",
     "        assert x.shape == (2,), x.shape        \n",
@@ -1626,52 +1580,208 @@
     "        self.input[2] = x        \n",
     "        \n",
     "        # run the layer 0 block ONCE \n",
-    "        layer_0_out_3 = self.layer0.apply(self.input)\n",
-    "        # add to cache\n",
-    "        self.layer0_cache.add(layer_0_out_3)        \n",
-    "        # lookup the dilated values from cache\n",
-    "        cached_layer_0_outputs = self.layer0_cache.cached_dilated_values()        \n",
+    "        # add to cache then lookup output of the window\n",
+    "        block0_out = self.block0.apply(self.input)\n",
+    "        self.layer0_cache.add(block0_out)\n",
+    "        cached_layer0_outputs = self.layer0_cache.cached_dilated_values()\n",
     "        \n",
     "        # feed dildated cached values to layer 1\n",
-    "        layer_1_out = self.layer1.apply(cached_layer_0_outputs)\n",
+    "        # again with cached lagged values\n",
+    "        block1_out = self.block1.apply(cached_layer0_outputs)\n",
+    "        self.layer1_cache.add(block1_out)\n",
+    "        cached_layer1_outputs = self.layer1_cache.cached_dilated_values()\n",
+    "        \n",
+    "        # only ever need to run final dilation layer once\n",
+    "        block2_out = self.block2.apply(cached_layer1_outputs)\n",
+    "        \n",
     "        # run y_pred\n",
     "        # TODO: port to arm math too\n",
-    "        y_pred = np.dot(layer_1_out, self.classifier_kernel.squeeze()) + self.classifier_bias\n",
+    "        y_pred = np.dot(block2_out, self.classifier_kernel.squeeze()) + self.classifier_bias\n",
     "        return y_pred\n",
     "                \n",
     "        \n",
-    "layer0 = Block(\n",
+    "block0 = Block(\n",
     "    c1_kernel = test_model.layers[1].weights[0].numpy(),\n",
     "    c1_bias = test_model.layers[1].weights[1].numpy(),\n",
     "    c2_kernel = test_model.layers[2].weights[0].numpy(),\n",
     "    c2_bias = test_model.layers[2].weights[1].numpy(),\n",
     ")\n",
     "\n",
-    "layer1 = Block(\n",
+    "block1 = Block(\n",
     "    c1_kernel = test_model.layers[3].weights[0].numpy(),\n",
     "    c1_bias = test_model.layers[3].weights[1].numpy(),\n",
     "    c2_kernel = test_model.layers[4].weights[0].numpy(),\n",
     "    c2_bias = test_model.layers[4].weights[1].numpy(),\n",
     ")\n",
     "\n",
-    "model = Model(\n",
-    "    layer0, layer1,\n",
-    "    classifier_kernel = test_model.layers[5].weights[0].numpy(),\n",
-    "    classifier_bias = test_model.layers[5].weights[1].numpy()    \n",
+    "block2 = Block(\n",
+    "    c1_kernel = test_model.layers[5].weights[0].numpy(),\n",
+    "    c1_bias = test_model.layers[5].weights[1].numpy(),\n",
+    "    c2_kernel = test_model.layers[6].weights[0].numpy(),\n",
+    "    c2_bias = test_model.layers[6].weights[1].numpy(),\n",
+    ")\n",
+    "\n",
+    "model = CachedBlockModel(\n",
+    "    block0, block1, block2,\n",
+    "    classifier_kernel = test_model.layers[7].weights[0].numpy(),\n",
+    "    classifier_bias = test_model.layers[7].weights[1].numpy()    \n",
     ")        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2545ac9c",
+   "execution_count": 64,
+   "id": "5062d33e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_3 (InputLayer)        [(None, 40, 2)]           0         \n",
+      "                                                                 \n",
+      " c1a (Conv1D)                (None, 40, 4)             28        \n",
+      "                                                                 \n",
+      " c1b (Conv1D)                (None, 40, 4)             20        \n",
+      "                                                                 \n",
+      " c2a (Conv1D)                (None, 40, 8)             104       \n",
+      "                                                                 \n",
+      " c2b (Conv1D)                (None, 40, 8)             72        \n",
+      "                                                                 \n",
+      " c3a (Conv1D)                (None, 40, 16)            400       \n",
+      "                                                                 \n",
+      " c3b (Conv1D)                (None, 40, 16)            272       \n",
+      "                                                                 \n",
+      " y_pred (Conv1D)             (None, 40, 1)             17        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 913\n",
+      "Trainable params: 913\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a test model with a sequence > receptive field of the model\n",
+    "\n",
+    "LONGER_TEST_SEQ_LEN = 40\n",
+    "assert LONGER_TEST_SEQ_LEN > TEST_SEQ_LEN\n",
+    "\n",
+    "longer_test_model = create_dilated_model(LONGER_TEST_SEQ_LEN, all_outputs=True)\n",
+    "longer_test_model.set_weights(test_model.get_weights())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "0671e187",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.29461184,  0.3274455 ,  0.37451556,  0.37590218,  0.3853497 ,\n",
+       "        0.37622088,  0.36402023,  0.34810725,  0.28860468,  0.24934366,\n",
+       "        0.19947602,  0.1206888 ,  0.03427413, -0.04163425, -0.11471059,\n",
+       "       -0.19247872, -0.25439584, -0.30226862, -0.32917932, -0.35598844,\n",
+       "       -0.37087944, -0.38046977, -0.39099526, -0.3760245 , -0.3505563 ,\n",
+       "       -0.3341102 , -0.30218342, -0.26526642, -0.23138633, -0.15920699,\n",
+       "       -0.06759232,  0.01059318,  0.09197989,  0.1653739 ,  0.21602067,\n",
+       "        0.2721607 ,  0.33559766,  0.36470342,  0.3738055 ,  0.37879047],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# run a longer test sequence through the keras model\n",
+    "# note: we expect a warmup of 3**3=27 steps for this 3 layer\n",
+    "# network as it processed the left padded zeros\n",
+    "\n",
+    "longer_test_seq = np.expand_dims(test_x[:LONGER_TEST_SEQ_LEN], 0)\n",
+    "assert longer_test_seq.shape == (1, LONGER_TEST_SEQ_LEN, 2)\n",
+    "\n",
+    "model_out = longer_test_model(longer_test_seq)\n",
+    "model_out = [v.numpy() for v in model_out]\n",
+    "model_out = [v[0] for v in model_out]            # drop batch, which is always 1\n",
+    "c1a_output, c1b_output, c2a_output, c2b_output, c3a_output, c3b_output, y_pred_keras = model_out\n",
+    "y_pred_keras.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "2c37f3f5",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# test_seq = np.expand_dims(test_x[:TEST_SEQ_LEN], 0)\n",
+    "# y_pred_cmsis = model.apply(test_seq)\n",
+    "\n",
+    "# print(y_pred_cmsis, y_pred_keras[-1])\n",
+    "# np.all(np.isclose(y_pred_cmsis, y_pred_keras[-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "79f938e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_seq = np.expand_dims(test_x[5:5+TEST_SEQ_LEN], 0)\n",
+    "# y_pred_cmsis = model.apply(test_seq)\n",
+    "\n",
+    "# print(y_pred_cmsis, y_pred_keras[8+5])\n",
+    "# np.all(np.isclose(y_pred_cmsis, y_pred_keras[8+5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f08caf96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 40, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.29461187,  0.3274455 ,  0.37451553,  0.3759022 ,  0.38534966,\n",
+       "        0.37622088,  0.3640202 ,  0.34810728,  0.28860468,  0.24934375,\n",
+       "        0.19947615,  0.12068876,  0.03427411, -0.04163421, -0.11471061,\n",
+       "       -0.19247875, -0.25439587, -0.30226848, -0.32917932, -0.3559884 ,\n",
+       "       -0.37087953, -0.3804698 , -0.39099517, -0.37602454, -0.35055625,\n",
+       "       -0.33411023, -0.30218345, -0.26526642, -0.23138636, -0.15920699,\n",
+       "       -0.06759215,  0.010593  ,  0.09197972,  0.1653738 ,  0.21602073,\n",
+       "        0.27216068,  0.33559772,  0.3647034 ,  0.3738055 ,  0.37879044],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(longer_test_seq.shape)\n",
     "\n",
     "y_preds = []\n",
-    "for i in range(20):    \n",
+    "for i in range(LONGER_TEST_SEQ_LEN):    \n",
     "    next_step_y_pred = model.apply(longer_test_seq[0, i])\n",
     "    y_preds.append(next_step_y_pred)\n",
     "\n",
@@ -1681,7 +1791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b91ed284",
+   "id": "7b978d50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b161816",
+   "id": "87c68c72",
    "metadata": {},
    "outputs": [],
    "source": []
